[package]
name = "ckb-debugger-api"
description = "Standalone debugger for Nervos CKB"
version = "0.115.0-rc2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ckb-hash = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-hash"}
ckb-chain-spec = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-chain-spec"}
ckb-jsonrpc-types = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-jsonrpc-types"}
ckb-mock-tx-types = { path = "../ckb-mock-tx-types", version = "0.115.0-rc2" }
ckb-script = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-script",default-features = false}
ckb-types = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-types"}
ckb-vm = "=0.24.9"
hex = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
wasm-bindgen = "=0.2.50"

[dev-dependencies]
byteorder = "1.3.2"
