[package]
name = "ckb-debugger"
description = "Standalone debugger for Nervos CKB"
version = "0.115.0-rc2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"

[features]
default = ["probes"]
stdio = ["ckb-vm-debug-utils/stdio"]
probes = ["probe", "ckb-script/flatmemory"]

[dependencies]
clap = "2.33.0"
ckb-chain-spec = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-chain-spec"}
ckb-debugger-api = { path = "../ckb-debugger-api", version = "0.115.0-rc2" }
ckb-hash = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-hash"}
ckb-mock-tx-types = { path = "../ckb-mock-tx-types", version = "0.115.0-rc2" }
ckb-script = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-hash",default-features = false}
ckb-types = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-types"}
ckb-vm = { version = "=0.24.9" }
ckb-vm-debug-utils = { path = "../ckb-vm-debug-utils", version = "0.115.0-rc2" }
ckb-vm-pprof = { path = "../ckb-vm-pprof", version = "0.115.0-rc2" }
env_logger = "0.4.3"
ckb-gdb-remote-protocol = { path = "../ckb-gdb-remote-protocol", version = "0.115.0-rc2" }
gdbstub = "0.6.6"
gdbstub_arch = "0.2.4"
hex = "0.4"
lazy_static = "1.4.0"
libc = "0.2.132"
log = "0.4.0"
rand = "0.8.5"
serde_json = "1.0"
serde_plain = "1.0"
probe = { version = "0.5.0", optional = true }
