[package]
name = "ckb-mock-tx-types"
description = "CKB mock transaction types"
version = "0.119.0-pre"
license = "MIT"
edition = "2021"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = {git = "https://github.com/nervosnetwork/ckb.git",branch = "develop",package="ckb-types"}

ckb-jsonrpc-types ={git = "https://github.com/nervosnetwork/ckb.git",branch = "develop",package="ckb-jsonrpc-types"}

ckb-traits = {git = "https://github.com/nervosnetwork/ckb.git",branch = "develop",package="ckb-traits"}

serde = { version = "1.0", features = ["derive"] }
